<resources>
    <string name="app_name">کرایه‌چی</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="save_action">ذخیره</string>
    <string name="delete_route">حذف مسیر</string>
    <string name="saved_route">مسیر جدید ذخیره شد</string>
    <string name="logout_action">خروج</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_timing">زمان</string>
    <string name="timing">زمان</string>
    <string name="page_acoompany">همراهان</string>
    <string name="accompany">همراهان</string>
    <string name="page_pricing">هزینه</string>
    <string name="price">هزینه</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="route_column">مسیرهای ثبت شده</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_routes">در بارگذاری مسیرها مشکلی پیش آمده است</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading">در بارگذاری مشکلی پیش آمده است</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="error_loading_events">در بارگذاری رویدادها مشکلی پیش آمده است</string>
    <string name="error_loading_contacts">در بارگذاری پیام ها</string>
    <string name="error_loading_addresses">در یافتن آدرس ها مشکلی پیش آمده است</string>
    <string name="no_users">No Users</string>
    <string name="no_routes">مسیری ثبت نشده است</string>
    <string name="no_message">پیامی ثبت نشده است</string>
    <string name="no_suggest">گروهی پیشنهادی ثبت نشده است. لطفا شبکه اجتماعی را به دوستانتان معرفی کنید</string>
    <string name="no_suggest_route">هم مسیر برای شما ثبت نشده است. لطفا این برنامه را به دوستانتان معرفی کنید</string>
    <string name="no_events">رویدادی ثبت نشده است</string>
    <string name="no_contacts">پیامی ثبت نشده است</string>
    <string name="no_news">No News</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>
    <string name="testVersion">نسخه آزمایشی</string>
    <string name="label_email_address">پست الکترونیکی</string>
    <string name="label_mobile">شماره تلفن همراه</string>
    <string name="label_password">رمز عبور</string>
    <string name="label_code">کد معرفی(اختیاری)</string>
    <string name="label_login">ورود</string>
    <string name="label_register">ثبت نام</string>
    <string name="register_user">کاربر جدید</string>
    <string name="newUserRegister">کاربر جدید هستید؟</string>
    <string name="AlreadyRegistered">قبلا ثبت نام کرده اید؟</string>
    <string name="message_get_info">در حال دریافت مسیر...</string>
    <string name="no_group">شما هم مسیری در گروه هم ماشینی خود ندارید</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="message_bad_credentials">شماره تلفن همراه یا رمز عبور اشتباه است</string>
    <string name="message_already_registered">این شماره قبلا ثبت شده است. لطفا وارد شوید</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account"> لطفا شماره تلفن و رمزعبور را صحیح وارد کنید</string>
    <string name="timer_running">Timer is running %s</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">خانه</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string name="title_new_route">مسیرجدید</string>
    <string name="my_routes">مسیرهای من</string>
    <string name="user_info">اطلاعات کاربری</string>
    <string name="help">راهنما</string>
    <string name="rules">قوانین</string>
    <string name="feed_back">بازخورد</string>
    <string name="manage_route">مدیریت مسیر</string>
    <string name="source">مبدا</string>
    <string name="destination">مقصد</string>
    <string name="new_route">مسیر</string>
    <string name="src_address_detail">جزییات آدرس مبدا</string>
    <string name="dst_address_detail">جزییات آدرس مقصد</string>
    <string name="submit">ثبت</string>
    <string name="today">امروز</string>
    <string name="at_time">ساعت</string>
    <string name="in_date">در تاریخ و ساعت مشخص</string>
    <string name="date">تاریخ</string>
    <string name="weekly">هر هفته این مسیر تکرار می شود</string>
    <string name="saturday">شنبه</string>
    <string name="sunday">یکشنبه</string>
    <string name="monday">دوشنبه</string>
    <string name="tuesday">سه شنبه</string>
    <string name="wednesday">چهارشنبه</string>
    <string name="thursday">پنج شنبه</string>
    <string name="friday">جمعه</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="leave_group">خروج از گروه</string>
    <string name="accept_suggest">تایید درخواست</string>
    <string name="appointment">قرار ملاقات</string>
    <string name="set_appointment">تعیین زمان و مکان سوار شدن</string>
    <string name="join_group">پیوستن به گروه</string>
    <string name="delete_group">حذف پیشنهاد</string>
    <string name="add_to_group">افزودن به گروه من</string>
    <string name="request_ride_share">درخواست هم سفری</string>
    <string name="request_ride">درخواست هم سفری در این مسیر</string>
    <string name="share_route">اشتراک گذاری مسیر</string>
    <string name="my_group">گروه هم ماشین من</string>
    <string name="user_page">صفحه کاربر</string>
    <string name="has_car">آیا حاضرید سایر افراد هم مسیر را با خودروی خود به مقصد برسانید؟</string>
    <string name="howMany_accompany">تعداد افراد خردسال یا مسن همراه شما</string>
    <string name="win_win">توافقی</string>
    <string name="min_max_price">هزینه مشخص</string>
    <string name="free">رایگان</string>
    <string name="calculate">دریافت اطلاعات</string>
    <string name="do_continue">ادامه...</string>
    <string name="click_on_map">روی نقشه مشخص کنید</string>
    <string name="rial">ریال</string>
    <string name="toman">تومان</string>
    <string name="src_dst_not_empty">با لمس بر روی نقشه مبدا و مقصد را مشخص کنید</string>
    <string name="route_saved">مسیر جدید با موفقیت ثبت شد</string>
    <string name="service_not_available">سرویس مکان یابی غیرفعال است</string>
    <string name="invalid_lat_long_used">موقعیت نامعتبر است</string>
    <string name="no_address_found">آدرسی برای این مکان یافت نشد</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="please_wait">لطفا شکیبا باشید...</string>
    <string name="wait">...</string>
    <string name="do_wait">صبر کنید...</string>
    <string name="van_price">کرایه ون</string>
    <string name="taxi_price">کرایه تاکسی سواری</string>
    <string name="car_price">کرایه خودرو شخصی</string>
    <string name="message_price">یکی از کرایه ها باید تکمیل شود</string>
    <string name="message_timeout">پاسخی از سرور دریافت نشد. لطفا مجددا تلاش نمایید</string>
    <string name="taxi_line">تاکسی خطی</string>
    <string name="back_twice">برای خروج دوبار Back را کلیک کنید</string>
    <string name="taxi_src_dst">نام خط تاکسی</string>
    <string name="taxi_line_code">کد خط تاکسی</string>
    <string name="taxi_cab">تاکسی سرویس</string>
    <string name="try_again">اطلاعات بروز شد، لطفا مجددا دریافت اطلاعات را کلیک نمایید</string>
    <string name="retry">لطفا مجددا تلاش نمایید</string>
    <string name="no_route_found">مسیر یافت نشد</string>
    <string name="error_occured">مشکلی به وجود آمده است</string>
    <string name="IamSure">مسیر حرکت صحیح است</string>
    <string name="reset">شروع مجدد</string>
    <string name="man">آقا</string>
    <string name="woman">خانم</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="email">پست الکترونیکی</string>
    <string name="national_code">کد ملی</string>
    <string name="license_no">شماره گواهینامه</string>
    <string name="license_info">اطلاعات گواهینامه</string>
    <string name="car_info">اطلاعات خودرو</string>
    <string name="check_suggest">ارزیابی پیشنهادهای ارایه شده</string>
    <string name="suggest_route">هم مسیر پیشنهادی</string>
    <string name="car_type">نوع خودرو</string>
    <string name="car_no">پلاک خودرو</string>
    <string name="car_color">رنگ خودرو</string>
    <string name="add_taxiline_action">افزودن خط تاکسی</string>
    <string name="mobile_message">جهت افزایش اعتبار داده ها، لطفا شماره تلفن همراه خود را نیز وارد نمایید</string>
    <string name="mobile_confirm_message">و با تلفن همراه خود یک پیامک بدون متن به شماره</string>
    <string name="sms_panel">10008191</string>
    <string name="mobile_confirm2_message">ارسال نمایید</string>
    <string name="will_delete_message">در صورت عدم ارسال پیامک، مسیر وارد شده حذف خواهد شد</string>
    <string name="title_taximeter">تاکسی متر</string>
    <string name="confirm">تایید</string>
    <string name="title_contact_us">تماس با ما</string>
    <string name="not_allowed_5">تنها 5 نقطه کلیدی را مشخص کنید</string>
    <string name="taxi_route">با کلیک بر روی مسیر حرکت تاکسی، نحوه حرکت آن از مبدا به مقصد را مشخص کنید</string>
    <string name="message_fill_price">لطفا حداقل یکی از قیمت ها را وارد نمایید</string>
    <string name="camera">با دوربین</string>
    <string name="fromGallery">از گالری</string>
    <string name="later">بعدا</string>
    <string name="choose_pic">انتخاب عکس</string>
    <string name="info_saved">اطلاعات ذخیره شد</string>
    <string name="please_select">لطفا یک مورد را انتخاب کنید</string>
    <string name="snapp_badrequest_message">خطا</string>
    <string name="message">پیام...</string>
    <string name="fa_send">&#xf1d8;</string>
    <string name="write_detail">جزییات آدرس را وارد نمایید</string>
    <string name="network_error">خطا در ارتباط با شبکه</string>
    <string name="access_error">خطا در دسترسی به دلیل وقفه</string>
    <string name="not_confirmed">پیامک دریافت نشده است. لطفا پس از چند دقیقه مجددا تلاش نمایید</string>
    <string name="not_correct">کد وارد شده نامعتبر است</string>
    <string name="src_error">لطفا مبدا را روی نقشه مشخص کنید</string>
    <string name="dst_error">لطفا مقصد را روی نقشه مشخص کنید</string>
    <string name="route_info">اطلاعات مسیر</string>
    <string name="sms_message">پس از ارسال پیامک به برنامه بازگردید و شماره را تایید نمایید</string>
    <string name="go_to_app">برو به برنامه</string>
    <string name="go_to_register">ثبت نام</string>
    <string name="help_title">راهنما</string>
    <string name="faq_1">قیمت تاکسی تلفنی به صورت تقریبی و با توجه به نرخنامه سازمان تاکسیرانی شهر تهران محاسبه می شود</string>
    <string name="q_2">قیمت ها چگونه محاسبه می شود؟</string>
    <string name="faq_3">قیمت‌های سرویس‌های اسنپ، تپسی، کارپینو و می‌بریم از وبسایت این برنامه‌ها استخراج می‌شود</string>
    <string name="empty_text2">شما آدرس منتخب ندارید.با استفاده از گزینه \u002B در این صفحه</string>
    <string name="empty_text1">اینجا آدرس های منتخب</string>
    <string name="empty_text3">خود را می توانید ببیند</string>
    <string name="empty_text4">می توانید آدرس های منتخب خود را برای دسترسی راحت تر</string>
    <string name="empty_text5">در آینده اضافه کنید</string>
    <string name="sms_identity">کد فعال‌سازی</string>
    <string name="sms_sent">کد فعال‌سازی برای شماره‌ی زیر ارسال شد</string>
    <string name="send">ارسال</string>
    <string name="entered_wrong_number">شماره را اشتباه وارد کردید؟</string>
</resources>