<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                    android:id="@+id/user_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/ic_camera" />

                <TextView
                    android:id="@+id/user_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="09121093488"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <TextView
                android:id="@+id/gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:clickable="true"
                android:text="@string/man"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:hint="@string/name" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#ff000a"
                android:paddingRight="12dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <EditText
                android:id="@+id/family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:hint="@string/family" />

            <TextView
                android:id="@+id/textViewfam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="12dp"
                android:textColor="#ff000a"
                android:text="@string/family"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:hint="@string/email" />

            <TextView
                android:id="@+id/textViewemail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="12dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <EditText
                android:id="@+id/national_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:hint="@string/national_code" />

            <TextView
                android:id="@+id/textViewnational_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="12dp"
                android:text="@string/national_code"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/go_on"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_continue"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
