<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/source_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/destination_layout"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/src_label"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundedbutton"
            android:paddingRight="15dp"
            android:paddingTop="18dp"
            android:text="@string/source"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/src_detail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="80dp"
            android:hint="@string/click_on_map"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/src_editText"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/src_detail"
            android:editable="false"
            android:hint="@string/click_on_map"
            android:paddingRight="75dp"
            android:paddingTop="0dp"
            android:textSize="11sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/destination_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/do_continue_layout"
        android:layout_alignParentRight="true"
        android:background="#e0f2f1"
        android:paddingLeft="10dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/dst_label"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundedbutton"
            android:paddingRight="10dp"
            android:paddingTop="18dp"
            android:text="@string/destination"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dst_detail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="80dp"
            android:hint="@string/click_on_map"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dst_editText"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/dst_detail"
            android:editable="false"
            android:hint="@string/click_on_map"
            android:paddingRight="75dp"
            android:paddingTop="0dp"
            android:textSize="11sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/do_continue_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/do_continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#26a69a"
            android:padding="7dp"
            android:text="@string/do_continue"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
